PR/42630 asin(2.0) and acos(2.0) doesn't return NaN. reported by NARUSE, Yui -san, Thanks!